--- a/public/index.html
+++ b/public/index.html
@@ -8,30 +8,8 @@
     <title>Hamster wars</title>
 </head>
 <body>
-    <form action="/hamsters" method="POST">
-        <input type="text" name="name">
-        <input type="number" name="age">
-        <input type="text" name="favFood">
-        <input type="text" name="loves">
-        <input type="text" name="imgName">
-        <input type="number" name="wins">
-        <input type="number" name="defeats">
-        <input type="number" name="games">
-        <button type="submit">add</button>
-    </form>
-    <div class="results">
-        <div class="hamster" id="winner"></div>
-        <div class="hamster" id="loser"></div>
-    </div>
-    <div id="arena">
-        <div class="hamster-1">
-
-        </div>
-        <div class="hamster-2">
-
-        </div>
-    </div>
-    <div id="allHamsters"></div>
+    <h1>Stay tuned for a <span class="rad">radical</span> hamster app.</h1>
+    <img src="http://38.media.tumblr.com/ddcf457169ab7cb9065a9cb171c97400/tumblr_nqle4vZiWc1ryzigco1_400.gif" alt="cute-hamster">
     <script src="./script.js"></script>
 </body>
 </html>
